@@ -5,6 +5,9 @@ Changelog
 1.0b4 (unreleased)
 ==================
 
+- Add 'assert_cmd' API to support simpler assertions for verify when needing to
+  check the result of an external command.
+
 - Switch to asking pip installing eggs instead of flat installations as
   namespaces seem to collide otherwise.
 
